# drone-receiving-platform

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  progress.md
backend/: Dockerfile  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/api/: data.py  flights.py  landings.py  simulation.py  stats.py  telemetry.py  websocket.py
backend/app/models/: __init__.py  drone.py  flight.py  landing.py  mission.py  telemetry.py
backend/app/ros_bridge/: image_sub.py  mission_sub.py  telemetry_sub.py  udp_listener.py
backend/app/ros_bridge/proto_gen/: __init__.py  telemetry.proto  telemetry_pb2.py
backend/app/schemas/: telemetry.py
backend/app/services/: ai_report_generator.py  data_collector.py  flight_tracker.py  inspection_image_generator.py  landing_manager.py  minio_client.py  redis_client.py  timescale.py
backend/app/simulation/: anomalies.py  fleet_simulator.py  orchestrator.py  routes.py  telemetry_simulator.py
configs/: .env.example  nginx.conf
cpp_telemetry_publisher/: .clang-format  CMakeLists.txt  Dockerfile  README.md  vcpkg.json
cpp_telemetry_publisher/configs/: flight_path_example.yaml
cpp_telemetry_publisher/include/telemetry_publisher/: config.h  publisher.h  telemetry_generator.h  trajectory.h  udp_socket.h
cpp_telemetry_publisher/proto/: telemetry.proto
cpp_telemetry_publisher/src/: config.cpp  main.cpp  publisher.cpp  telemetry_generator.cpp  trajectory.cpp  udp_socket.cpp
cpp_telemetry_publisher/tests/: test_telemetry_generator.cpp  test_trajectory.cpp  test_udp_socket.cpp  udp_receiver_check.py
docs/: (obsolete) platform_status_and_plan.md  cpp_telemetry_publisher_spec.md  implementation_plan.md  phase4_plan.md  phase4_wp1_instructions.md  phase4_wp1_report.md  phase4_wp2_instructions.md  phase4_wp2_report.md  phase4_wp3_instructions.md  phase4_wp3_report.md  phase4_wp4_instructions.md  phase4_wp4_report.md  phase4_wp5_report.md  phase5_wp1_report.md  platform_status_and_plan.md  user_guide.md
frontend/: Dockerfile  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/AlertPanel/: AlertPanel.tsx
frontend/src/components/AltitudeChart/: AltitudeChart.tsx
frontend/src/components/InspectionReport/: InspectionReport.tsx
frontend/src/components/LandingControl/: LandingControl.tsx
frontend/src/components/MapView/: MapView.tsx
frontend/src/components/MissionProgress/: MissionProgress.tsx
frontend/src/components/SimulationControl/: SimulationControl.tsx
frontend/src/components/TelemetryCharts/: TelemetryCharts.tsx
frontend/src/components/TelemetryPanel/: TelemetryPanel.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/services/: api.ts
scripts/: verify_scale.sh
